しーちゃん

--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
 
+<!DOCTYPE html>
+<html lang="ja" prefix="og: https://ogp.me/ns#">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>しーちゃんのリコーダー練習所</title> <meta name="description" content="しーちゃんのリコーダー練習所は、リコーダーの運指を鍵盤や音名で簡単に検索・確認できる無料オンラインツールです。初心者から上級者まで、あなたのリコーダー演奏をサポートします。"> <meta name="keywords" content="リコーダー, 運指, 楽譜, 練習, トレーナー, 鍵盤, 音名, ドレミ, 無料, オンライン, 初心者, ソプラノリコーダー, 譜面"> <meta name="author" content="しーちゃん">
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://your-recorder-site.pages.dev/"> <meta property="og:url" content="https://your-recorder-site.pages.dev/"> <meta property="og:type" content="website">
+<meta property="og:title" content="しーちゃんのリコーダー練習所 - 鍵盤で探す"> <meta property="og:description" content="しーちゃんのリコーダー練習所は、リコーダーの運指を鍵盤から直感的に検索できる無料オンラインツールです。楽しくリコーダーを学びましょう。"> <meta property="og:site_name" content="しーちゃんのリコーダー練習所">
+<meta property="og:image" content="https://your-recorder-site.pages.dev/img/c-chan_title.png"> 
+<meta property="og:locale" content="ja_JP">
+
+<meta name="twitter:card" content="summary_large_image"> 
+<meta name="twitter:site" content="@yourtwitterhandle"> <meta name="twitter:creator" content="@yourtwitterhandle"> <meta name="twitter:title" content="しーちゃんのリコーダー練習所 - 鍵盤で探す"> <meta name="twitter:description" content="リコーダー運指を鍵盤から直感的に検索！無料のオンラインリコーダー運指トレーナーで楽しく練習しよう。"> <meta name="twitter:image" content="https://your-recorder-site.pages.dev/img/c-chan_title.png"> 
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=M+PLUS+Rounded+1c:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://unpkg.com/modern-css-reset@1.4.0/dist/reset.min.css"/>
+<link rel="stylesheet" href="css/common.css">
+<link rel="stylesheet" href="css/keyboard.css"> <link rel="icon" type="image/png" sizes="48x48" href="favicon/favicon-48.png">
+<link rel="icon" type="image/png" sizes="64x64"   href="favicon/favicon-64.png">
+<link rel="icon" type="image/png" sizes="128x128" href="favicon/favicon-128.png">
+<link rel="icon" type="image/png" sizes="192x192" href="favicon/favicon-192.png">
+<link rel="icon" type="image/png" sizes="256x256" href="favicon/favicon-256.png">
+<link rel="apple-touch-icon" sizes="180x180" href="favicon/favicon-180.png">
+<link rel="shortcut icon" href="favicon/favicon.ico">
+    
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "しーちゃんのリコーダー練習所 - 鍵盤で探す",
+      "description": "しーちゃんのリコーダー練習所は、リコーダーの運指を鍵盤や音名で簡単に検索・確認できる無料オンラインツールです。初心者から上級者まで、あなたのリコーダー演奏をサポートします。",
+      "url": "https://your-recorder-site.pages.dev/",
+      "inLanguage": "ja",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "しーちゃんのリコーダー練習所",
+        "url": "https://your-recorder-site.pages.dev/"
+      }
+    }
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-your-ad-client-id"
+     crossorigin="anonymous"></script>
+</head>
+<body>
+
+<div id="header-placeholder"></div>
+
+<div class="container">
+    <main>
+        <p>ピアノの鍵盤をクリックすると、その下に運指が表示されます。</p>
+        <div id="key-fingering-display">
+            <span>鍵盤を選択してください</span>
+        </div>
+        <div class="piano-staff">
+            <div class="piano-container">
+                <div id="piano" class="piano"></div>
+            </div>
+            <img id="staff-img" class="staff-img" src="./img/staff_blank.png" alt="五線譜">
+        </div>
+
+        <div style="margin-top: 3rem; border-top: 1px solid var(--border-color); padding-top: 2rem;">
+            <h2 style="text-align: center; font-weight: 700; margin-bottom: 1.5rem; letter-spacing: 0.05em;">運指・五線譜 一覧</h2>
+            <div id="fingering-chart-board" class="board"></div>
+        </div>
+    </main>
+</div>
+
+<div id="footer-placeholder"></div>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YOUR_GA_ID"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YOUR_GA_ID');
+</script>
+
+<script src="js/loader.js"></script>
+<script src="js/keyboard.js"></script> </body>
+</html>
